Fix table styling/size and cell alignment

--- a/src/dash-table/components/Table/Table.less
+++ b/src/dash-table/components/Table/Table.less
@@ -346,25 +346,15 @@
                 }
             }
 
-            .cell {
-                table {
-                    width: min-content;
-                }
-            }
-
             &.dash-fill-width {
                 .cell-0-1,
                 .cell-1-1 {
                     flex: 1 0 auto;
-
-                    table {
-                        width: 100%;
-                    }
                 }
 
                 .cell {
                     table {
-                        width: max-content;
+                        width: 100%;
                     }
                 }
             }
